[package]
name = "tic-tac-toe-mcts"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
rand = "0.8.5"

[dev-dependencies]
rstest = "0.21.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# One day pedantic must be enabled to get rid of the numeric issues!
# pedantic = "deny"
style = "deny"
